--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://cf2da9e7-02c0-4626-bfdb-c60a249b797d.preview.emergentagent.com
 WDS_SOCKET_PORT=443
